# sqlalchemy-xa-recovery

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sqlalchemy_xa_recovery/: __init__.py  _recovery.py  _session.py  _value_objects.py
src/sqlalchemy_xa_recovery/_context_managers/: _helpers.py  asynchronous.py  synchronous.py
src/sqlalchemy_xa_recovery/_dialects/: base.py  factory.py  mysql.py  postgres.py
tests/: conftest.py  test_value_objects.py
tests/asynchronous/: test_context_manager.py  test_recover_xa_transactions.py  test_session.py
tests/support/: containers.py  helpers.py  orm.py
tests/synchronous/: test_context_manager.py  test_recover_xa_transactions.py  test_session.py
